fix: delombok all classes to avoid compilation issues